<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.taller2.Principal">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/taller2"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/genero"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/cmbGenero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/marca"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/cmbMarca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipo"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/cmbTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valo_x_und"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblResultado1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valor" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/di_cant"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/TxtCant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/valor"
            android:inputType="number"/>

        <TextView
            android:id="@+id/lblResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resultado"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="299dp">

            <Button
                android:id="@+id/button3"
                android:layout_width="177dp"
                android:layout_height="79dp"
                android:onClick="Calcular"
                android:text="@string/calcular" />

            <Button
                android:id="@+id/button2"
                android:layout_width="195dp"
                android:layout_height="79dp"
                android:onClick="Borrar"
                android:text="@string/borrar" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
